# EGTSWebUI

./: .gitignore  Cargo.toml  readme.md
backend/: Cargo.toml  authSchema.sql  build.rs  buildLinux.sh  go.mod  go.sum  main.go
backend/cmd/api/: api.go
backend/config/: config.template.toml
backend/internal/app/handlers/: api.go  auth.go  updater.go
backend/internal/database/: auth.go  common.go  taiko.go
backend/internal/middleware/: requireAuth.go
backend/internal/model/: costumeOptions.go  leaderboard.go  profile.go  profileOptions.go  songOptions.go  user.go
backend/pkg/: config.go  datatable.go
backend/src/: api.rs  db.rs  main.rs
backend/updater/: config.json  initUpdater.go
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  index.css  lib.rs  main.rs  main.ts  router.rs  types.ts
frontend/src/components/: mod.rs  navbar.vue
frontend/src/components/atoms/: mod.rs  navitem.rs  navitem.vue  navtitle.rs
frontend/src/components/organisms/: DashboardSidebar.vue  EditCostume.vue  EditProfile.vue  EditSongOptions.vue  EditTabs.vue  LoginForm.vue  RegisterForm.vue  mod.rs  navbar.rs  navbar.vue
frontend/src/components/pages/: home.rs
frontend/src/router/: index.ts
frontend/src/store/: authStore.ts  datatableStore.ts  profileStore.ts
frontend/src/views/: DashboardView.vue  DisabledView.vue  EditProfileView.vue  FavSongsView.vue  GuideView.vue  HomeView.vue  LeaderboardView.vue  LoginView.vue  LogoutView.vue  ProfileView.vue  RegisterView.vue  SettingsView.vue  logoutView.vue
frontend/styles/: main.css  output.css
ui/: index.html  package.json
(+23 files in other folders)
