[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
#This is the our common library that we will create
common = {path = "../common"}
#Rocket a rust web server
rocket = {version = "0.5.0", features = ["json"]}
#A rust serialization library for interacting between the backend and frontend
serde = "1.0.133"
rusqlite = "0.31.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
toml = "0.8.10"
serde_derive = "1.0.197"