[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.11.0"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"] }
yew-router = "0.18.0"